# JaydrAmenti

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md
.Jules/: palette.md
assets/: banner.py
attached_assets/: Pasted-NMAP-Commands-Cheat-Sheet-2024-Basic-Scanning-Techniques-Nmap-Query-Nmap-Command-Scan-a-single-ta-1754916413875_1754916413875.txt
config/: settings.json
data/: cyber_amenti.db
locales/: de.json  en.json  es.json  fr.json
src/core/: exploits.py  netcat.py  profiler.py  scanner.py
src/data/: commands.py
src/ui/: interface.py  themes.py
src/utils/: config.py  database.py  translator.py
